watch_wasm/wasm_runner/target/release/build/cap-primitives-a01a009a75ccd77c/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(windows_by_handle)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(windows_file_type_ext)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `windows_file_type_ext` has been stable since 1.64.0 and no longer requires an attribute to enable
 --> <anon>:1:12
  |
1 | #![feature(windows_file_type_ext)]
  |            ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(io_error_more)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(io_error_uncategorized)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
